--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-couchbase==4.1.12-rc.1
+couchbase==4.1.12
 streamlit==1.31.1
 langchain-community @ git+https://github.com/nithishr/langchain.git@sdk#subdirectory=libs/community
 httpx==0.27.0
