--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-couchbase==4.1.12
-langchain-community @ git+https://github.com/nithishr/langchain.git@2a93972f8427d325200b72c99df76fe325704cb5#subdirectory=libs/community
-langchain==0.1.11
-langchain-openai==0.0.8
+couchbase==4.2.0
+langchain==0.1.13
+langchain-community==0.0.29
+langchain-openai==0.1.0
 requests==2.31.0
