--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-couchbase==4.2.0
-langchain==0.1.13
-langchain-community==0.0.29
-langchain-openai==0.1.0
-requests==2.31.0
+couchbase==4.3.0
+langchain==0.2.6
+langchain-community==0.2.6
+langchain-couchbase==0.0.1
+langchain-openai==0.1.12
+requests==2.32.3
